[gd_scene load_steps=2 format=3 uid="uid://dfsqxf63ab2vn"]

[ext_resource type="Script" uid="uid://cun0hy8sl1bd8" path="res://scenes/battle_scene/ui/action_select/action_select.gd" id="1_m7jp6"]

[node name="ActionSelect" type="VBoxContainer"]
alignment = 2
script = ExtResource("1_m7jp6")
metadata/_edit_use_anchors_ = true

[node name="AttackButton" type="Button" parent="."]
layout_mode = 2
text = "(A) Attack"
alignment = 0

[node name="SkillButton" type="Button" parent="."]
layout_mode = 2
text = "(S) Skill"
alignment = 0

[node name="ItemButton" type="Button" parent="."]
layout_mode = 2
text = "(D) Item"
alignment = 0

[node name="DefendButton" type="Button" parent="."]
layout_mode = 2
text = "(F) Defend"
alignment = 0

[node name="PassButton" type="Button" parent="."]
layout_mode = 2
text = "(X) Pass"
alignment = 0
